# Kiwifield

./: .gitignore  CMakeLists.txt  Kiwifield.sln  README.md
Kiwifield/: Kiwifield.vcxproj  Kiwifield.vcxproj.filters  Makefile  camera.cpp  camera.h  character.cpp  character.h  collisionHelper.cpp  collisionfiles.cpp  collisionfiles.h  const.h  dynamicPoint.cpp  dynamicPoint.h  editor.cpp  editor.h  editorCollision.cpp  editorPortal.cpp  editorSprite.cpp  fileCollision.cpp  fileCollision.h  files.cpp  files.h  hello.txt  image.cpp  image.h  img.cpp  img.h  level.cpp  level.h  lodepng.cpp  main.cpp  manager.cpp  manager.h  olcPixelGameEngine.h  output  player.cpp  player.h  portal.cpp  portal.h  saveSprite.cpp  (+6 more)
Kiwifield/assets/skies/: space.cpp
Kiwifield/assets/stages/space/: space.scn
Kiwifield/assets/stages/tp/: tp.col
Kiwifield/gamer/: gamer.col  gamer.scn
Kiwifield/levels/examplelevel/: examplelevel.pge  examplelevel.txt  scene.pge  scene.txt
Kiwifield/levels/new/: new.pge  new.txt
Kiwifield/stages/examplelevel/: examplelevel.col  examplelevel.scn
Kiwifield/stages/space/: space.col  space.scn
Kiwifield/stages/tp/: tp.col  tp.scn
src/: const.h  main.cpp
src/assets/skies/: day1.cpp
src/assets/stages/examplelevel/: examplelevel.col
src/editor/: editor.h  editorPortal.cpp  editorSprite.cpp
src/entities/: dynamicPoint.h  player.h
src/lib/: olcPixelGameEngine.h
src/utility/: files.cpp  files.h  img.h  spriteutil.cpp
src/world/: camera.h  portal.cpp  portal.h  stage.h  world.cpp  world.h
